--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
     display: flex;
     flex: 1;
 }
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: start;
+}
 .hero-main-text {
     font-size: 48px;
     font-weight:bolder;
@@ -51,5 +57,57 @@ body {
     border-radius: 6px;
     padding-left: 24px;
     padding-right: 24px;
-    border-color: royalblue;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-color: #3882F6;
+}
+.info {
+    background-color: #F9FAF8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.head {
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
+    margin: 32px;
+}
+.infos {
+    display: flex;
+    gap:32px;
+}
+.info-box {
+    display: flex;
+    flex-direction: column;
+    width:128px;
+    margin-bottom: 64px;
+}
+.image-box{
+    height: 120px;
+    width: 120px;
+    border: 4px solid #3882F6;
+}
+.quote {
+    background-color: #E5E7EB;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    padding-left: 128px;
+    padding-right: 128px;
+}
+.quote-at-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.quote-is {
+    font-size: 36px;
+    font-style: light italic;
+    color: #1F2937;
+    flex-wrap: wrap;
+    align-self: flex-start;
+}
+.author{
+    align-self: flex-end;
+    color: black;
 }
