--- a/style.css
+++ b/style.css
@@ -144,3 +144,13 @@ body {
     padding-bottom: 4px;
     border-color: #F9FAF8;
 }
+.copyright {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.odin {
+    color: #F9FAF8;
+    margin:32px;
+}
